--- a/moon/docker-compose/moon.yml
+++ b/moon/docker-compose/moon.yml
@@ -16,7 +16,7 @@ services:
     command:
       - server
       - start
-      - --disable-csrf-token-checks
+#      - --disable-csrf-token-checks
       - --address=0.0.0.0:51515
       - --tls-key-file=/tls/kopia-key.pem
       - --tls-cert-file=/tls/kopia-cert.pem
